# potatoinador

./: .gitignore  README.md  export_onnx.py  main.py  onnx.py  prep_ds.py  pyproject.toml  raspi_main.py  requirements_rpi.txt  train.py
