[project]
name = "potatoinador"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kagglehub>=0.3.13",
    "onnx>=1.20.0",
    "onnxruntime-gpu>=1.23.2",
    "onnxscript>=0.5.6",
    "opencv-python>=4.12.0.88",
    "polars>=1.35.2",
    "pyserial>=3.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
